Bug51229 - implemented an IE8 hack to get around filters ignoring overflow:visible.

--- a/sugarcrm/themes/Sugar/css/style.css
+++ b/sugarcrm/themes/Sugar/css/style.css
@@ -5693,8 +5693,18 @@ background-image: -webkit-gradient(
     color-stop(0.78, rgba(0,0,0,.3)),
     color-stop(1, rgba(0,0,0,0))
     );
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#20517c', endColorstr='#0d3a62');
+
 height: 43px\9;
+}
+#ie8GradientFix{
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: transparent;
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#20517c', endColorstr='#0d3a62')";
 }
 #dcmenu ul.clickMenu { filter:none; }
 
